r.univar/r3.univar manuals: examples improved
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68371 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.rescale/r.rescale.html
+++ b/raster/r.rescale/r.rescale.html
@@ -54,7 +54,8 @@ selected as the input range.
 <a href="r.rescale.eq.html">r.rescale.eq</a>,
 <a href="r.report.html">r.report</a>,
 <a href="r.resample.html">r.resample</a>,
-<a href="r.stats.html">r.stats</a>
+<a href="r.stats.html">r.stats</a>,
+<a href="r.univar.html">r.univar</a>
 </em>
 
 <h2>AUTHOR</h2>
