r.in.lidar: serpent mound image (thanks to Doug Newcomb)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68402 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.in.lidar/r.in.lidar.html
+++ b/raster/r.in.lidar/r.in.lidar.html
@@ -246,6 +246,11 @@ r.in.lidar input="Serpent Mound Model LAS Data.las" \
            output=Serpent_Mound_Model_LAS_Data method=mean
 </pre></div>
 
+<center>
+<img src="r_in_lidar.png">
+<p><em>Figure: Elevation for the whole area of Serpent Mound dataset</em></p>
+</center>
+
 <h3>Height above ground</h3>
 
 The mean height above ground of the points can be computed for each
