r.import manual: SRTM V3 example added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68436 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/r.import/r.import.html
+++ b/scripts/r.import/r.import.html
@@ -57,8 +57,35 @@ When importing whole-world maps the user should disable map-trimming with
 the <b>-n</b> flag. For further explanations of <b>-n</b> flag, please refer
 the to <a href="r.proj.html">r.proj</a> manual.
 
-<h2>EXAMPLE</h2>
+<h2>EXAMPLES</h2>
 
+
+<h3>Import of SRTM V3 global data at 1 arc-seconds resolution</h3>
+
+The SRTM V3 1 arc-second global data (~30 meters resolution) are available
+from EarthExplorer (<a href="http://earthexplorer.usgs.gov/">http://earthexplorer.usgs.gov/</a>).
+The SRTM collections are located under the "Digital Elevation" category.
+<p>
+Example for North Carolina sample dataset (the tile name is "n35_w079_1arc_v3.tif"):
+
+<div class="code"><pre>
+# set computational region to e.g. 10m elevation model:
+g.region raster=elevation -p
+ 
+# Import with reprojection on the fly. Recommended parameters:
+# resample   Resampling method to use for reprojection - bilinear
+# extent     Output raster map extent - region: extent of current region
+# resolution Resolution of output raster map
+#  - region: current region resolution - limit to g.region setting from above
+r.import input=n35_w079_1arc_v3.tif output=srtmv3_resamp10m resample=bilinear \
+  extent=region resolution=region title="SRTM V3 resampled to 10m resolution"
+
+# beautify colors:
+r.colors srtmv3_resamp10m color=elevation
+</pre></div>
+
+
+<h3>Import of WorldClim data</h3>
 Import of a subset from <a href="">Bioclim data set</a>, to be reprojected
 to current location projection (North Carolina sample dataset). While normally
 the full raster map is imported, we spatially subset using the <em>extent</em>
