r.import: fix svn:keywords
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68441 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/r.import/r.import.html
+++ b/scripts/r.import/r.import.html
@@ -133,4 +133,4 @@ Markus Metz<br>
 Improvements: Martin Landa, Anna Petrasova
 
 <p>
-<i>Last changed: $Date: 2015-01-20 20:52:27 +0100 (Tue, 20 Jan 2015) $</i>
+<i>Last changed: $Date$</i>
