--- a/vector/v.vect.stats/v.vect.stats.html
+++ b/vector/v.vect.stats/v.vect.stats.html
@@ -161,4 +161,4 @@ v.db.select myzipcodes_wake column=ZIPCODE_,ZIPNAME,avg_elev
 Markus Metz
 
 <p>
-<i>Last changed: $Date: 2015-01-01 13:07:46 +0100 (Thu, 01 Jan 2015) $</i>
+<i>Last changed: $Date$</i>
