i.atcorr manual, imageryintro: clarify TOAR part; cross links added; keywords added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68456 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.landsat.acca/i.landsat.acca.html
+++ b/imagery/i.landsat.acca/i.landsat.acca.html
@@ -51,6 +51,7 @@ i.landsat.acca -f band_prefix=226_62.toar output=226_62.acca
 <h2>SEE ALSO</h2>
 
 <em>
+<a href="i.atcorr.html">i.atcorr</a>,
 <a href="i.landsat.toar.html">i.landsat.toar</a>
 </em>
 
