--- a/imagery/i.aster.toar/i.aster.toar.html
+++ b/imagery/i.aster.toar/i.aster.toar.html
@@ -1,9 +1,9 @@
 <h2>DESCRIPTION</h2>
 
 <em>i.aster.toar</em> calculates the Top Of Atmosphere (TOA) reflectance
-for Terra-Aster L1B in the visible, NIR and SWIR bands (9+1 bands) and
+for Terra-ASTER L1B in the visible, NIR and SWIR bands (9+1 bands) and
 brigthness temperature for the TIR bands (5 bands), all from L1B DN values. 
-It is useful after importing your Aster imagery from storage format that
+It is useful to apply after import of original ASTER imagery that
 is generally in standard DN values range.
 
 <p>
@@ -35,7 +35,11 @@ The function is defined in gain_aster.c file.
 <a href="r.in.aster.html">r.in.aster</a>
 </em>
 
-<h2>AUTHORS</h2>
+<p>
+ASTER sensor data download:
+<a href="http://asterweb.jpl.nasa.gov/">ASTER: Advanced Spaceborne Thermal Emission and Reflection Radiometer</a>
+
+<h2>AUTHOR</h2>
 
 Yann Chemin, CSU, Australia
 
