--- a/imagery/i.biomass/i.biomass.html
+++ b/imagery/i.biomass/i.biomass.html
@@ -8,14 +8,17 @@ Input:
  <li>Light Use Efficiency [0.0-1.0], in Uzbekistan cotton is at 1.9 most of the time.
  <li>Latitude [0.0-90.0], from <em>r.latlong</em>.
  <li>DOY [1-366].
- <li>Transmissivity of the Atmosphere single-way [0.0-1.0], mostly around 0.7+ in clear sky.
+ <li>Transmissivity of the atmosphere single-way [0.0-1.0], mostly around 0.7+ in clear sky.
  <li>Water availability [0.0-1.0], possibly using direct output from <em>i.eb.evapfr</em>.
 </ul>
 
 <h2>NOTES</h2>
-It can use the output of i.eb.evapfr directly as water availability input.
+
+<em>i.biomass</em> can use the output of <em>i.eb.evapfr</em> directly
+as water availability input.
 
 <h2>TODO</h2>
+
 Remove Latitude, DOY and Tsw from input and replace with a raster 
 input compatible with <em>r.sun</em> output.
 
@@ -23,7 +26,8 @@ input compatible with <em>r.sun</em> output.
 
 <em>
 <a href="i.eb.evapfr.html">i.eb.evapfr</a>,
-<a href="r.latlong.html">r.latlong</a>
+<a href="r.latlong.html">r.latlong</a>,
+<a href="r.sun.html">r.sun</a>
 </em>
 
 <h2>REFERENCES</h2>
@@ -38,7 +42,7 @@ Supplementing farm level water productivity assessment by remote
 sensing in transition economies. Water International. 30(4):513-521.
 
 
-<h2>AUTHORS</h2>
+<h2>AUTHOR</h2>
 
 Yann Chemin, Bec de Mortagne, France
 
