--- a/raster/r.in.gdal/r.in.gdal.html
+++ b/raster/r.in.gdal/r.in.gdal.html
@@ -292,11 +292,22 @@ additionally the related <a href="http://www.ngdc.noaa.gov/mgg/topo/elev/esri/hd
 Finally, e.g. the 'terrain' color table can be assigned to the imported map with <em>r.colors</em>.
 See also their <a href="http://www.ngdc.noaa.gov/mgg/dem/demportal.html">DEM portal</a>.
 
-<h3>Worldclim.org</h3>
-To import <a href="http://www.worldclim.org">Worldclim</a> data, the following
+<h3>Worldclim.org data</h3>
+
+To import the BIL data from <a href="http://www.worldclim.org">Worldclim</a>, the following
 line has to be added to each .hdr file:
 <div class="code"><pre>
 PIXELTYPE SIGNEDINT
+</pre></div>
+<p>
+
+To import the ESRI Grd data from <a href="http://www.worldclim.org">Worldclim</a>, the
+broken spatial extent (exceeding the boundaries) needs to be fixed prior to import: 
+
+<div class="code"><pre>
+# example: tmean dataset
+gdal_translate -a_ullr -180 90 180 -60 tmean_1 tmean_1_fixed.tif
+r.in.gdal input=tmean_1_fixed.tif output=tmean_1
 </pre></div>
 
 <h3>HDF</h3>
